--- a/SafariNote.safariextension/SafariNote.html
+++ b/SafariNote.safariextension/SafariNote.html
@@ -6,21 +6,38 @@
         <script tpe="text/javascript">
             safari.application.addEventListener("command", runCommand, false);
             safari.application.addEventListener("validate", validate, false);
+            safari.extension.settings.addEventListener("change", settingsChange, false);
+            var iframeSettings = {};
+            iframeSettings.url = safari.extension.settings.BigethanSafariNoteUrl;
+            iframeSettings.width = safari.extension.settings.BigethanSafariNoteWidth;
+            iframeSettings.height = safari.extension.settings.BigethanSafariNoteHeight;
+             
             function runCommand(event)
             {
                 
                 if (event.command == "BigethanSafariNote") {
-                    event.target.browserWindow.activeTab.page.dispatchMessage("BigethanSafariNote", '');
+                    event.target.browserWindow.activeTab.page.dispatchMessage("BigethanSafariNote", iframeSettings);
                 }
             }
             function validate(event)
             {
                 if (event.command == "BigethanSafariNote") {
-                    console.log(event.target.browserWindow.activeTab.url.substr(-3));
                     event.target.disabled = !event.target.browserWindow.activeTab.url;
                     if (!event.target.disabled) {
                         event.target.disabled = event.target.browserWindow.activeTab.url.substr(-3) == 'pdf' ? true : false;
                     }
+                }
+            }
+            function settingsChange(event)
+            {
+                if (event.key == 'BigethanSafariNoteUrl') {
+                    iframeSettings.url = event.newValue;
+                }
+                if (event.key == 'BigethanSafariNoteWidth') {
+                    iframeSettings.width = event.newValue;
+                }
+                if (event.key == 'BigethanSafariNoteHeight') {
+                    iframeSettings.height = event.newValue;
                 }
             }
         </script>
